--- a/food_sales_predictions.ipynb
+++ b/food_sales_predictions.ipynb
@@ -6,7 +6,7 @@
       "name": "food-sales-predictions.ipynb",
       "provenance": [],
       "mount_file_id": "1a6j1dI3fevj82qRpz6BeKs_c4uQtLF7A",
-      "authorship_tag": "ABX9TyPl1Qf+cYSOi6kbWW62dPWD",
+      "authorship_tag": "ABX9TyNwhNyh5aJiTvU9K1YlzRju",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4770,6 +4770,80 @@
       },
       "execution_count": 75,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **Inspect the Result**"
+      ],
+      "metadata": {
+        "id": "DyZzF28Hd0dZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(np.isnan(X_train_processed).sum().sum(),\n",
+        "      'missing values in training data')\n",
+        "print(np.isnan(X_test_processed).sum().sum(),\n",
+        "      'missing values in testing data')\n",
+        "print('\\n')\n",
+        "print('All data in X_train_processed are', X_train_processed.dtype)\n",
+        "print('All data in X_test_processed are', X_test_processed.dtype)\n",
+        "print('\\n')\n",
+        "print('shape of data is', X_train_processed.shape)\n",
+        "print('\\n')\n",
+        "X_train_processed"
+      ],
+      "metadata": {
+        "id": "hhaqd5eDd5EG",
+        "outputId": "386fd830-e215-45e2-93b3-1339d06a42b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 missing values in training data\n",
+            "0 missing values in testing data\n",
+            "\n",
+            "\n",
+            "All data in X_train_processed are float64\n",
+            "All data in X_test_processed are float64\n",
+            "\n",
+            "\n",
+            "shape of data is (6392, 1581)\n",
+            "\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.7862131 , -0.71277507,  1.82810922, ...,  0.        ,\n",
+              "         1.        ,  0.        ],\n",
+              "       [ 0.53804912, -1.29105225,  0.60336888, ...,  0.        ,\n",
+              "         1.        ,  0.        ],\n",
+              "       [-0.11620136,  1.81331864,  0.24454056, ...,  1.        ,\n",
+              "         0.        ,  0.        ],\n",
+              "       ...,\n",
+              "       [ 1.06821761, -0.92052713,  1.52302674, ...,  1.        ,\n",
+              "         0.        ,  0.        ],\n",
+              "       [ 1.68862755, -0.2277552 , -0.38377708, ...,  1.        ,\n",
+              "         0.        ,  0.        ],\n",
+              "       [ 0.7862131 , -0.95867683, -0.73836105, ...,  1.        ,\n",
+              "         0.        ,  0.        ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
     }
   ]
 }
